--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <br>
    <h2 id="vniz">hi, im</h2>
    <h1>saopin</h1>
-   <h2>and im make music.</h2>
+   <h2>and i make music.</h2>
    <h2>here are my previews of my work!</h2>
  </div>
 <!-- songs. --->
