--- a/socials.html
+++ b/socials.html
@@ -28,6 +28,8 @@
       <a href="https://saopin.carrd.co/">carrd</a>
       <br><br>
       <a>mail : saopinka@gmail.com</a>
+      <br><br>
+      <a href="https://audius.co/saopin">audius</a>
   </div>
   <footer>
     <h3>--------------------------------</h3>
