--- a/socials.html
+++ b/socials.html
@@ -19,11 +19,11 @@
     <h2>socials</h2>
       <a href="https://soundcloud.com/saopin">soundcloud</a>
     <BR><BR>
-      <a href="https://twitter.com/Jevgeni38359546">twitter</a>
+      <a href="https://twitter.com/saopinmusic">twitter</a>
     <BR><BR>
       <a href="https://www.instagram.com/disaopin/">instagram (photo)</a>
-    <!--<bR><bR>
-      <a href="https://www.instagram.com/saopinofficial/">instagram</a>--->
+    <<bR><bR>
+      <a href="https://www.instagram.com/saopinmusic/">instagram</a>
     <br><br>
       <a href="https://saopin.carrd.co/">carrd</a>
       <br><br>
